--- a/my-app/src/app/home/home.component.html
+++ b/my-app/src/app/home/home.component.html
@@ -3,3 +3,4 @@
 <!-- <button (click)="instand()">Not Found</button> <br> -->
 <button routerLink="/instand">dasd</button>
 <button routerLink="/admin">Admin</button>
+<a href="http://localhost:4200/instand">sc</a>
