--- a/bt_angular_1/src/app/features/users/user-list/user-list.component.html
+++ b/bt_angular_1/src/app/features/users/user-list/user-list.component.html
@@ -11,12 +11,7 @@
     </div>
   </div>
 
-  <div class="loading" *ngIf="isLoading">
-    <div class="spinner"></div>
-    <p>Đang tải dữ liệu...</p>
-  </div>
-
-  <div class="user-grid" *ngIf="!isLoading && users.length > 0">
+  <div class="user-grid" *ngIf="!(loadingService.loading$ | async) && users.length > 0">
     <div class="user-card" *ngFor="let user of users">
       <div class="user-avatar">
         <img [src]="user.avatar" [alt]="user.first_name + ' ' + user.last_name">
